add modular img game selector

--- a/src/app/img-game/img-game.component.html
+++ b/src/app/img-game/img-game.component.html
@@ -1,11 +1,13 @@
 <p>img-game works!</p>
-<h1 (click)="test()">aaaaaaa</h1>
 
 <div class="imgGame">
-  <img (click)="test()" src="{{ logo }}" alt="" />
-  <img src="assets/img/logoHeart.png" alt="" />
+  <h1>{{ titulo }}</h1>
+  <img src="{{ img }}" alt="" />
+  <!-- <h1>{{ name }}</h1> -->
+  <!-- <img (click)="test()" src="{{ logo }}" alt="" /> -->
+  <!-- <img src="assets/img/logoHeart.png" alt="" />
   <img src="assets/img/logoChaos.png" alt="" />
-  <img src="assets/img/logoFractal.png" alt="" />
+  <img src="assets/img/logoFractal.png" alt="" /> -->
 </div>
 <!-- <div class="imgGame">
   <img src="assets/img/logoHeart.png" alt="" />
