finished first version of game menu

--- a/src/app/game-selector/cards/card/card.component.html
+++ b/src/app/game-selector/cards/card/card.component.html
@@ -1,6 +1,5 @@
-<p>card works!</p>
-<div class="imgGame">
+<div class="container">
   <h1>{{ titulo }}</h1>
   <img src="{{ img }}" alt="" />
-  <a href="{{ link }}">aaaaaaaaaaaa</a>
+  <a href="{{ link }}">Ir</a>
 </div>
