--- a/src/app/game-selector/cards/card/card.component.sass
+++ b/src/app/game-selector/cards/card/card.component.sass
@@ -1,15 +1,12 @@
-.imgGame
-    height: 600px
-    width: 600px
-    border: 1px solid black
-    display: inline-grid
-    grid-template-columns: auto auto
-    gap: 50px 50px
-    justify-content: space-around
-    align-content: center
+.container
+
+    text-align: center
 
     img
         border: 1px solid black
         width: 100%
         max-width: 250px
         height: auto
+    a
+        display: block
+        font-size: 2em
