--- a/src/app/game-selector/cards/cards.component.html
+++ b/src/app/game-selector/cards/cards.component.html
@@ -1,4 +1,6 @@
-<p>cards works!</p>
-
-<app-card n="0"></app-card>
-<app-card n="1"></app-card>
+<div class="container">
+  <app-card n="0"></app-card>
+  <app-card n="1"></app-card>
+  <app-card n="2"></app-card>
+  <app-card n="3"></app-card>
+</div>
