finished first version of game menu

--- a/src/app/game-selector/cards/cards.component.html
+++ b/src/app/game-selector/cards/cards.component.html
@@ -1,6 +1,8 @@
-<div class="container">
-  <app-card n="0"></app-card>
-  <app-card n="1"></app-card>
-  <app-card n="2"></app-card>
-  <app-card n="3"></app-card>
+<div class="body">
+  <div class="container">
+    <app-card n="0"></app-card>
+    <app-card n="1"></app-card>
+    <app-card n="2"></app-card>
+    <app-card n="3"></app-card>
+  </div>
 </div>
