--- a/src/app/game-selector/cards/cards.component.sass
+++ b/src/app/game-selector/cards/cards.component.sass
@@ -1,17 +1,17 @@
-.container
-    height: 800px
-    width: 800px
-    border: 1px solid black
-    display: inline-grid
-    grid-template-columns: auto auto
-    gap: 50px 50px
-    justify-content: space-around
-    align-content: center
-    
+.body
+    height: 100vh
+    width: 100vw
+    background-color: #3b89a8
+    display: flex
+    justify-content: center
+    align-items: center
 
-//     #outer {
-//   border: 0.05em solid red;
-//   width:100%;
-//   display: flex;
-//   justify-content: center;
-// }
+    .container
+        height: 800px
+        width: 800px
+        border: 1px solid black
+        display: inline-grid
+        grid-template-columns: auto auto
+        gap: 50px 50px
+        justify-content: space-around
+        align-content: center
